More ds design manual ch2 exercises; leetcode practice

--- a/ds/kb/books/data_science_design_manual.ipynb
+++ b/ds/kb/books/data_science_design_manual.ipynb
@@ -568,6 +568,186 @@
    "metadata": {}
   },
   {
+   "source": [
+    "> Statistics\n",
+    "\n",
+    "#### 2-6\n",
+    "\n",
+    "Compare each pair of distributions to decide which one has the greater mean and the greater standard deviation (just relative to each other, not actual calculations).\n",
+    "\n",
+    "    3; 5; 5; 5; 8; 11; 11; 11; 13\n",
+    "    3; 5; 5; 5; 8; 11; 11; 11; 20\n",
+    "    \n",
+    "The second one has both the greater mean and standard deviation.\n",
+    "\n",
+    "    -20; 0; 0; 0; 15; 25; 30; 30\n",
+    "    -40; 0; 0; 0; 15; 25; 30; 30\n",
+    "\n",
+    "The first one has the greater mean and the second has the greater standard deviation.\n",
+    "\n",
+    "    0; 2; 4; 6; 8; 10\n",
+    "    20; 22; 24; 26; 28; 30\n",
+    "\n",
+    "The second one has a greater mean, while their standard deviations are the same.\n",
+    "\n",
+    "    100; 200; 300; 400; 500\n",
+    "    0; 50; 300; 550; 600\n",
+    "\n",
+    "They have the same mean; the second has a greater standard deviation."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### 2-7\n",
+    "\n",
+    "Construct a probability distribution where none of the mass lies within one $\\sigma$ of the mean.\n",
+    "\n",
+    "This would look like a binary distribution, with everything pushed to either side of the mean by at least 1 $\\sigma$.\n",
+    "\n",
+    "#### 2-8\n",
+    "\n",
+    "How does the arithmetic and geometric mean compare on random integers?\n",
+    "\n",
+    "The arithmetic mean is the sum of a set divided by the size of the set; the geometric mean is the product of the set to the nth root.\n",
+    "\n",
+    "#### 2-9\n",
+    "\n",
+    "Show that the arithmetic mean equals the geometric mean when all terms are the same."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Arithmetic mean: 5.0\nGeometric mean: 4.999999999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "\n",
+    "arr = [5, 5, 5, 5, 5, 5, 5]\n",
+    "\n",
+    "print(\"Arithmetic mean:\", sum(arr) / len(arr))\n",
+    "product = reduce((lambda x, y: x * y), arr)\n",
+    "print(\"Geometric mean:\", product**(1/len(arr)))\n",
+    "# Close enough"
+   ]
+  },
+  {
+   "source": [
+    "> Correlation Analysis\n",
+    "\n",
+    "#### 2-10\n",
+    "\n",
+    "True or False: a corr coefficient of -0.9 indicates a stronger linear relationship than a coefficient of 0.5. Explain why.\n",
+    "\n",
+    "True. Coefficients closer to -1 indicate a negative linear relationship and those closer to 1 indicate a positive linear relationship. Closer to 0 means less of a relationship."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### 2-11\n",
+    "\n",
+    "What would be the correlation coefficient between the annual salaries of college and high school graduates at a given company, if for each possible job title the college graduates always made:\n",
+    "\n",
+    "- $5,000 more than high school grads? = 1\n",
+    "- 25% more than high school grads? = 1 - .25 = 0.75\n",
+    "- 15% less than high school grads? = 1 - .15 = 0.85"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### 2-12\n",
+    "\n",
+    "What would be the correlation between the ages of husbands and wives if men always married woman who were:\n",
+    "\n",
+    "- Three years younger than themselves? = 1\n",
+    "- Two years older than themselves? = 1\n",
+    "- Half as old as themselves? = 0.5"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### 2-13\n",
+    "\n",
+    "Use data or literature found in a Google search to estimate/measure the strength of the correlation between:\n",
+    "\n",
+    "- Hits and walks scored for hitters in baseball.\n",
+    "- Hits and walks allowed by pitchers in baseball."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### 2-14\n",
+    "\n",
+    "Compute the Pearson and Spearman Rank correlations for uniformly drawn samples of points $(x; xk)$. How do these values change as a function of increasing $k$?\n",
+    "\n",
+    "Increasing $k$ would have decrease the Pearson coefficient while the Spearman Rank coefficient would stay the same."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "> Logarithms\n",
+    "\n",
+    "#### 2-15\n",
+    "\n",
+    "Show that the logarithm of any number less than 1 is negative."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### 2-16\n",
+    "\n",
+    "Show that the logarithm of zero is undefined."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### 2-17\n",
+    "\n",
+    "Prove that\n",
+    "\n",
+    "$x \\cdot\u0001 y = b^{(log_b x + log_b y)}$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### 2-18\n",
+    "\n",
+    "Prove the correctness of the formula for changing a base-b logarithm to base-a, that\n",
+    "\n",
+    "$log_a(x) = log_b(x) / log_b(a)$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
