--- a/ds/practice/daily_practice/21-05/21-05-01-121-sat.ipynb
+++ b/ds/practice/daily_practice/21-05/21-05-01-121-sat.ipynb
@@ -22,9 +22,9 @@
     "# 2021-05-01 Daily Practice\n",
     "\n",
     "- [ ] Practice: algorithms and data structures\n",
-    "- [ ] Learn: Data Science Design Manual\n",
+    "- [x] Learn: Data Science Design Manual\n",
     "- [ ] Write: tobias.fyi or Contact Section\n",
-    "- [ ] Build: Savor (Data)"
+    "- [x] Build: Savor (Data)"
    ],
    "cell_type": "markdown",
    "metadata": {}
