SE behavioral and DE technical, mostly sql

--- a/ds/practice/daily_practice/21-05/21-05-03-123-mon.ipynb
+++ b/ds/practice/daily_practice/21-05/21-05-03-123-mon.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "# 2021-05-03 Daily Practice\n",
     "\n",
-    "- [ ] Practice: algorithms and data structures\n",
+    "- [x] Practice: algorithms and data structures\n",
     "- [ ] Learn: Data Science Design Manual\n",
     "- [x] Write: tobias.fyi or Contact Section\n",
     "- [ ] Build: Savor (Data)"
