Chill day to give myself some slack for the week to come

--- a/ds/practice/daily_practice/21-05/21-05-08-128-sat.ipynb
+++ b/ds/practice/daily_practice/21-05/21-05-08-128-sat.ipynb
@@ -1,51 +1,32 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python376jvsc74a57bd0d279672dec97687973da8f2b23dbdcc76259fde61874b489061eca7e42b844dc",
-   "display_name": "Python 3.7.6 64-bit ('vela': pipenv)"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 2021-05-08 Daily Practice\n",
     "\n",
-    "- [ ] Practice\n",
+    "- [x] Practice\n",
     "  - [ ] SQL\n",
-    "  - [ ] Code\n",
-    "  - [ ] Solve\n",
+    "  - [x] Algorithms + Data Structures\n",
+    "  - [ ] Solve + Design\n",
     "- [ ] Learn\n",
     "- [ ] Write\n",
     "- [ ] Build"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "---\n",
     "\n",
     "## Practice"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Combination Sum\n",
     "\n",
@@ -85,9 +66,7 @@
     "\n",
     "    Input: candidates = [1], target = 2\n",
     "    Output: [[1,1]]\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -95,9 +74,9 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "SyntaxError",
      "evalue": "unexpected EOF while parsing (2726106141.py, line 7)",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;36m  File \u001b[0;32m\"/var/folders/51/jw_hn7_d1gx0q0thjrwtfh_00000gn/T/ipykernel_8093/2726106141.py\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    # If element is smaller than target,\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
@@ -123,14 +102,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "1"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -147,6 +126,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "```txt\n",
     "candidates = [2,3,6,7], target = 7\n",
@@ -163,11 +144,11 @@
     "element is larger than target.\n",
     "look for target in array\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Recursion?\n",
     "\n",
@@ -175,9 +156,7 @@
     "candidates = [2,3,6,7], target = 7\n",
     "Create a path to the target, using the remainder. Return path if it works, otherwise backtrack.\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -205,11 +184,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Not sure if it's possible without iteration."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -253,13 +232,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Buy and Sell Stock I\n",
     "\n",
     "> On [LeetCode](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -277,5 +256,26 @@
     "        return profit"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.7.6 64-bit ('vela': pipenv)",
+   "language": "python",
+   "name": "python37664bitvelapipenvde09592071074af6a70ce3b1ce38af95"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
