The last few days - more practicing and interviewing; job offer today!

--- a/ds/practice/daily_practice/21-05/21-05-10-130-mon.ipynb
+++ b/ds/practice/daily_practice/21-05/21-05-10-130-mon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "guided-underground",
+   "id": "removed-elite",
    "metadata": {},
    "source": [
     "# 2021-05-10 Daily Practice\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "secure-hierarchy",
+   "id": "veterinary-snowboard",
    "metadata": {},
    "source": [
     "---\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "humanitarian-corner",
+   "id": "incorporated-festival",
    "metadata": {},
    "source": [
     "### Problem solving process\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "narrative-latvia",
+   "id": "personalized-inside",
    "metadata": {},
    "source": [
     "#### Problem\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "dutch-wallet",
+   "id": "coated-panama",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "reduced-billy",
+   "id": "third-three",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "defined-momentum",
+   "id": "august-magic",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bored-fraud",
+   "id": "streaming-tiffany",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "balanced-crisis",
+   "id": "increasing-incentive",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bridal-convert",
+   "id": "ecological-grill",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "traditional-development",
+   "id": "unnecessary-spice",
    "metadata": {},
    "source": [
     "Once the simpler version of the problem (where a pair exists that add up to the target) is solved, expand that solution to include any other cases that need to be accounted for (arrays without a pair that add up to the target).\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indoor-blackjack",
+   "id": "amateur-excellence",
    "metadata": {},
    "source": [
     "> Think with simpler examples: try noticing a pattern"
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brazilian-anchor",
+   "id": "cutting-quarter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infrared-nebraska",
+   "id": "responsible-netscape",
    "metadata": {},
    "source": [
     "### Reverse integer\n",
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "correct-naples",
+   "id": "earlier-month",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coordinated-weather",
+   "id": "explicit-mainland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "charming-soviet",
+   "id": "approximate-credit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "diverse-pollution",
+   "id": "careful-idaho",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "expressed-enforcement",
+   "id": "immune-processor",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "tight-region",
+   "id": "transparent-silver",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "distributed-explorer",
+   "id": "steady-egyptian",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advance-engine",
+   "id": "average-power",
    "metadata": {},
    "source": [
     "### Longest common prefix\n",
@@ -422,18 +422,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dated-actress",
+   "metadata": {},
    "source": [
     "- Implement a trie\n",
     "- Insert words into trie\n",
     "- DFS for node that has multiple children"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "healthy-scout",
+   "id": "interesting-desperate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "expanded-opera",
+   "id": "spanish-webcam",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "wanted-cabinet",
+   "id": "frozen-straight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,18 +507,18 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "vanilla-census",
+   "id": "dress-small",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'fl'"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "execution_count": 12
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -525,6 +526,9 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "universal-martin",
+   "metadata": {},
    "source": [
     "### Max Subarray\n",
     "\n",
@@ -547,14 +551,12 @@
     "\n",
     "    Input: nums = [5,4,-1,7,8]\n",
     "    Output: 23"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "false-neighbor",
+   "id": "accompanied-treasure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,14 +581,16 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "blank-zealand",
+   "id": "tested-cliff",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "6\n1\n23\n"
+      "6\n",
+      "1\n",
+      "23\n"
      ]
     }
    ],
@@ -598,6 +602,9 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "posted-break",
+   "metadata": {},
    "source": [
     "### Same Tree\n",
     "\n",
@@ -606,14 +613,12 @@
     "Given the roots of two binary trees p and q, write a function to check if they are the same or not.\n",
     "\n",
     "Two binary trees are considered the same if they are structurally identical, and the nodes have the same value."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "taken-reputation",
+   "id": "printable-honor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,16 +638,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "horizontal-uncertainty",
+   "metadata": {},
    "source": [
     "### Combination Sum (Again)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rubber-vehicle",
+   "id": "surface-bookmark",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suspected-georgia",
+   "id": "hidden-dylan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,6 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "reliable-hamilton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,6 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "million-husband",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,18 +760,18 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "sonic-hormone",
+   "id": "abstract-kansas",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[[2, 2, 3], [7]]"
       ]
      },
+     "execution_count": 58,
      "metadata": {},
-     "execution_count": 58
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -775,17 +783,18 @@
   {
    "cell_type": "code",
    "execution_count": 59,
+   "id": "lucky-brooks",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[[2, 2, 2, 2], [2, 3, 3], [3, 5]]"
       ]
      },
+     "execution_count": 59,
      "metadata": {},
-     "execution_count": 59
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -797,17 +806,18 @@
   {
    "cell_type": "code",
    "execution_count": 53,
+   "id": "latin-freight",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "False"
       ]
      },
+     "execution_count": 53,
      "metadata": {},
-     "execution_count": 53
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -815,24 +825,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "apart-terry",
+   "metadata": {},
    "source": [
     "## Data Structures Review"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "improved-lighting",
+   "metadata": {},
    "source": [
     "### LinkedList\n",
     "\n",
     "Singly linked list with recursive methods."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 69,
+   "id": "charitable-daily",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,13 +875,16 @@
   {
    "cell_type": "code",
    "execution_count": 72,
+   "id": "pleasant-galaxy",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "1\n2\n3\n"
+      "1\n",
+      "2\n",
+      "3\n"
      ]
     }
    ],
@@ -883,6 +899,9 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "duplicate-mongolia",
+   "metadata": {},
    "source": [
     "### Queue\n",
     "\n",
@@ -892,13 +911,12 @@
     "- Dequeue: constant time - `O(1)`\n",
     "- Peek: constant time - `O(1)`\n",
     "- Space complexity = `O(n)`"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 79,
+   "id": "entire-amateur",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,6 +959,9 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "charming-knife",
+   "metadata": {},
    "source": [
     "### Stack\n",
     "\n",
@@ -950,13 +971,12 @@
     "- Pop: constant time - `O(1)`\n",
     "- Peek: constant time - `O(1)`\n",
     "- Space complexity = `O(n)`"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 80,
+   "id": "relevant-cattle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,24 +1008,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "respective-clone",
+   "metadata": {},
    "source": [
     "### Binary Search Tree\n",
     "\n",
     "First, I'm going to implement a BST from scratch, run DFS and BFS on it, then look for a good leetcode problem to apply it to."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 66,
+   "id": "hired-christmas",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "7.0\n255\n"
+      "7.0\n",
+      "255\n"
      ]
     }
    ],
@@ -1023,6 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
+   "id": "disabled-logistics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,6 +1111,9 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "careful-cause",
+   "metadata": {},
    "source": [
     "#### Traversals\n",
     "\n",
@@ -1095,13 +1122,12 @@
     "  - Inorder: Node visited in order (l->n->r)\n",
     "  - Preorder: Node visited before children (n->l->r)\n",
     "  - Postorder: Node visited after children (l->r->n)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 82,
+   "id": "conventional-official",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,19 +1152,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "imposed-singing",
+   "metadata": {},
    "source": [
     "### Longest substring without repeating characters\n",
     "\n",
     "On [LeetCode](https://leetcode.com/problems/longest-substring-without-repeating-characters/)\n",
     "\n",
     "I believe I have a good method for solving this one now: using a queue as a way to set up a sliding window. I can iterate through the string, adding each character to the queue. If the character matches the character at the front of the queue, dequeue the char off the front. Keep track of the max length of the queue and return it at the end."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 95,
+   "id": "specified-philadelphia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,24 +1194,32 @@
   {
    "cell_type": "code",
    "execution_count": 96,
+   "id": "tough-thousand",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "deque(['a'])\ndeque(['a', 'b'])\ndeque(['a', 'b', 'c'])\ndeque(['b', 'c', 'a'])\ndeque(['c', 'a', 'b'])\ndeque(['a', 'b', 'c'])\ndeque(['c', 'b'])\ndeque(['b'])\n"
+      "deque(['a'])\n",
+      "deque(['a', 'b'])\n",
+      "deque(['a', 'b', 'c'])\n",
+      "deque(['b', 'c', 'a'])\n",
+      "deque(['c', 'a', 'b'])\n",
+      "deque(['a', 'b', 'c'])\n",
+      "deque(['c', 'b'])\n",
+      "deque(['b'])\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "3"
       ]
      },
+     "execution_count": 96,
      "metadata": {},
-     "execution_count": 96
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1195,17 +1231,18 @@
   {
    "cell_type": "code",
    "execution_count": 94,
+   "id": "polish-roberts",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "deque(['c', 'a', 'b', 'c', 'b', 'b'])"
       ]
      },
+     "execution_count": 94,
      "metadata": {},
-     "execution_count": 94
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1216,15 +1253,17 @@
    ]
   },
   {
-   "source": [],
    "cell_type": "markdown",
-   "metadata": {}
+   "id": "sharp-sierra",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python37664bitvelapipenvde09592071074af6a70ce3b1ce38af95",
-   "display_name": "Python 3.7.6 64-bit ('vela': pipenv)"
+   "display_name": "Python 3.7.6 64-bit ('vela': pipenv)",
+   "language": "python",
+   "name": "python37664bitvelapipenvde09592071074af6a70ce3b1ce38af95"
   },
   "language_info": {
    "codemirror_mode": {
